Lab4/pzpi-23-3-horshcharuk-nikita-lab4/Server/k8s/40-ingress-optional.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elevate-api
  namespace: elevate
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elevate-api
                port:
                  number: 80
